--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -443,7 +443,17 @@ This necessitates $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to consider on
 as a minimal model that still demonstrates the crankshaft-like behavior.
 
 \section{Conclusions}
-
+The novel topologically protected four-state magnetoelectric switching found in GdMn$_2$O$_5$ originates from a unique large-amplitude collective mode -- the full-circle rotation of half the spins. 
+%
+This low-energy magnetic mode is coupled to a relatively large electric polarization and the spin rotation gives rise to polarization reversals. 
+%
+Remarkably, this rather complex spin and charge dynamics can be induced simply by increasing and decreasing the magnetic field, applied at a magic angle with respect to the crystallographic $a$-axis. This idea may find applications, such as in an electric counter of magnetic field pulses. 
+%
+%
+The robust unidrectional spin rotation originates from the asymmetric evolution of the energy landscape, and corresponds to an incontractible loop in the order parameter space. 
+This is a demonstration of the topological nature of the switching behavior in this material.
+%
+% Our findings break the ground for further research into other topologically-protected switching phenomena in ferroic materials.
 
 
 \printbibliography
