--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -3157,4 +3157,55 @@ title = {{Optimized norm-conserving Vanderbilt pseudopotentials}},
 volume = {88},
 year = {2013}
 }
+@article{Serebryanaya1995,
+abstract = {An "in situ" X-ray diffraction study of the GeTe under shear deformation and nonhydrostatic pressure conditions has been performed. By applying the shear deformation, two phase transitions with structure changes from NaCl to GeS and further to CsCl types were first detected at 19.2 and 38 GPa respectively. The X-ray powder diffraction data and unit-cell parameters of both pressure-induced phases of GeTe are given. The shear-deformation dependence of the GeTe transition pressures is found. {\textcopyright} 1995 Elsevier Science B.V.},
+author = {Serebryanaya, N. R. and Blank, V. D. and Ivdenko, V. A.},
+doi = {10.1016/0375-9601(94)00886-T},
+file = {:home/ponet/Downloads/0375-9601(94)00886-t.pdf:pdf},
+issn = {03759601},
+journal = {Physics Letters A},
+number = {1},
+pages = {63--66},
+title = {{GeTe-phases under shear deformation and high pressure up to 56 GPa}},
+volume = {197},
+year = {1995}
+}
+
+@article{Ernzerhof1999,
+author = {Ernzerhof, Matthias and Scuseria, Gustavo E and Introduction, I},
+file = {:home/ponet/Downloads/ernzerhof{\_}1999{\_}jcp{\_}110{\_}5029.pdf:pdf},
+number = {11},
+title = {functional},
+volume = {110},
+year = {1999}
+}
+
+@article{Perdew1996,
+abstract = {Generalized gradient approximations (GGA's) for the exchange-correlation energy improve upon the local spin density (LSD) description of atoms, molecules, and solids. We present a simple derivation of a simple GGA, in which all parameters (other than those in LSD) are fundamental constants. Only general features of the detailed construction underlying the Perdew-Wang 1991 (PW91) GGA are invoked. Improvements over PW91 include an accurate description of the linear response of the uniform electron gas, correct behavior under uniform scaling, and a smoother potential. {\textcopyright} 1996 The American Physical Society.},
+author = {Perdew, John P. and Burke, Kieron and Ernzerhof, Matthias},
+doi = {10.1103/PhysRevLett.77.3865},
+file = {:home/ponet/Downloads/PhysRevLett.77.3865.pdf:pdf},
+issn = {10797114},
+journal = {Physical Review Letters},
+number = {18},
+pages = {3865--3868},
+pmid = {10062328},
+title = {{Generalized gradient approximation made simple}},
+volume = {77},
+year = {1996}
+}
+
+@article{Pack1977,
+abstract = {It is again emphasized that for all cubic lattices the method of Monkhorst and Pack generates not only point sets identical to those obtained by Chadi and Cohen, but also intermediate sets with the same properties. In addition, a comparison of these two methods for the hexagonal lattice reveals our method to be more flexible and efficient. {\textcopyright} 1977 The American Physical Society.},
+author = {Pack, James D. and Monkhorst, Hendrik J.},
+doi = {10.1103/PhysRevB.16.1748},
+file = {:home/ponet/Downloads/PhysRevB.13.5188.pdf:pdf},
+issn = {01631829},
+journal = {Physical Review B},
+number = {4},
+pages = {1748--1749},
+title = {{"special points for Brillouin-zone integrations"-a reply}},
+volume = {16},
+year = {1977}
+}
 
