--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -3,7 +3,7 @@
 \section{Density Functional Theory \label{sec:DFT}}
 Many physics in condensed matter originate from the electronic structure of the material under study.
 There are two main ways of performing quantitative theoretical studies in case.
-The first is to start from a tight-binding model that includes the most likely valence orbitals of the constituent ions\cite{Slater1954}, fitting it to experimental measurements such as angle resolved photoemission spectroscopy\cite{Serebryanaya1995}.
+The first is to start from a tight-binding model that includes the most likely valence orbitals of the constituent ions\cite{Slater1954}, fitting it to experimental measurements such as angle resolved photoemission spectroscopy~\cite{Damascelli2004}.
 A second, purely theoretical, possibility is to desribe the electronic structure entirely from first-principles, using only the ions and crystalline structure as the input. 
 
 Density functional theory (DFT), originally envisioned in the seminal works of P. Hohenberg, W. Kohn and L. J. Sham \cite{Hohenberg1964,Kohn1965}, is a formalism very well suited for achieving this goal.
