--- a/papers/Theory/bib.bib
+++ b/papers/Theory/bib.bib
@@ -38,18 +38,17 @@ volume = {13},
 year = {1962}
 }
 
-@article{Serebryanaya1995,
-abstract = {An "in situ" X-ray diffraction study of the GeTe under shear deformation and nonhydrostatic pressure conditions has been performed. By applying the shear deformation, two phase transitions with structure changes from NaCl to GeS and further to CsCl types were first detected at 19.2 and 38 GPa respectively. The X-ray powder diffraction data and unit-cell parameters of both pressure-induced phases of GeTe are given. The shear-deformation dependence of the GeTe transition pressures is found. {\textcopyright} 1995 Elsevier Science B.V.},
-author = {Serebryanaya, N. R. and Blank, V. D. and Ivdenko, V. A.},
-doi = {10.1016/0375-9601(94)00886-T},
-file = {:home/ponet/Downloads/0375-9601(94)00886-t.pdf:pdf},
-issn = {03759601},
-journal = {Physics Letters A},
-number = {1},
-pages = {63--66},
-title = {{GeTe-phases under shear deformation and high pressure up to 56 GPa}},
-volume = {197},
-year = {1995}
+@article{Damascelli2004,
+abstract = {Angle-resolved photoemission spectroscopy (ARPES) is one of the most direct methods of studying the electronic structure of solids. By measuring the kinetic energy and angular distribution of the electrons photoemitted from a sample illuminated with sufficiently high-energy radiation, one can gain information on both the energy and momentum of the electrons propagating inside a material. This is of vital importance in elucidating the connection between electronic, magnetic, and chemical structure of solids, in particular for those complex systems which cannot be appropriately described within the independent-particle picture. The last decade witnessed significant progress in this technique and its applications, thus ushering in a new era in photoelectron spectroscopy; today, ARPES experiments with 2 meV energy resolution and 0.2° angular resolution are a reality even for photoemission on solids. In this paper we will review the fundamentals of the technique and present some illustrative experimental results; we will show how ARPES can probe the momentum-dependent electronic structure of solids providing detailed information on band dispersion and Fermi surface as well as on the strength and nature of many-body correlations, which may profoundly affect the one-electron excitation spectrum and in turn the macroscopic physical properties. {\textcopyright} Physica Scripta 2004.},
+author = {Damascelli, Andrea},
+doi = {10.1238/Physica.Topical.109a00061},
+file = {:home/ponet/Downloads/Damascelli{\_}2004{\_}Phys.{\_}Scr.{\_}2004{\_}61.pdf:pdf},
+issn = {02811847},
+journal = {Physica Scripta T},
+pages = {61--74},
+title = {{Probing the electronic structure of complex systems by ARPES}},
+volume = {T109},
+year = {2004}
 }
 
 @article{Slater1954,
